--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Home - Node + Express</h1>
+
+    <a href="/usuarios/30">Ver usuário 30</a>
+    <a href="/usuarios/496">Ver usuário 496</a>
 </body>
 </html>
