--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -16,7 +16,7 @@
         <form action="/cadastro/salvar" method="POST">
             <div>
                 <label for="nome">Nome completo:</label>
-                <input type="text" id="nome" nama="email">
+                <input type="text" id="nome" name="nome">
             </div>
             <div>
                 <label for="email">E-mail:</label>
