--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Home - Node + Express</h1>
 
-    <a href="/usuarios/30">Ver usuário 30</a>
-    <a href="/usuarios/496">Ver usuário 496</a>
-    <a href="">Cadastrar</a>
+    <a href="/usuarios">Ver usuário 30</a>
+    <a href="/usuarios">Ver usuário 496</a>
+    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
